Changes for 1.8.6rc1

 - [ZBX-3845] check, if this user group is used in the config, if so it cannot be deleted (Eduard)
 - [ZBX-3911] fixed wrong trigger expression parsing when key parameters contained "(" (KB)
 - [ZBX-3856] fixed new group creation from template page (Eduard)
 - [ZBX-3840] fixed possible path disclosure (Vedmak)
 - [ZBXNEXT-849] added example MySQL UserParameter to monitor database and table size (Richlv)
 - [ZBX-3935] fixed possible function redeclaration error (Vedmak)
 - [ZBX-3944] added support of multibyte NIC names for the net.if.* checks under Windows (Sasha)
 - [ZBX-3947] fixed compilation under AIX 5.2 with fileset lower than 5.2.0.40 (Sasha)
 - [ZBX-3947] fixed compilation under AIX 5.2 with enabled IPv6 (Sasha)
 - [ZBX-3426] Fix application unlink and clear when it is linked from template (Eduard)
 - [ZBX-1074] fixed compilation errors regarding sem_lock and sem_unlock on HP-UX; thanks to Brian Collins (asaveljevs)
 - [ZBX-3877] fixed slow Housekeeper for PostgreSQL 7.4+; thanks to Ildefonso Camargo (dimir)
 - [ZBXNEXT-816] added support for reloading configuration cache from the command line (Richlv,Sasha)
 - [ZBX-3063] added compatibility with PostgreSQL 9+; thanks to Andrey Groshev for patch (asaveljevs,Vedmak)
 - [ZBX-3890] added logging of ORACLE warning messages while connecting to the database (Sasha)
 - [ZBX-3880] fixed repeated processing of log-files through proxy when disabling a host or item (Sasha)
 - [ZBX-3420] fixed wrong error message being logged in case of DNS resolution errors (asaveljevs,rudolfs)
 - [ZBX-3519] fixed unterminated processes when system.run[,wait] times out and added proper output handling for system.run[,nowait] on UNIX (rudolfs)
 - [ZBX-3768] fixed 'uptime' and 's' units as according to the documentation (Sasha)
 - [ZBX-3490] added support for LVM devices and full path to devices to vfs.dev.read and vfs.dev.write; thanks to Takanori Suzuki (dimir, sasha)